src/objects/Contract.object
<CustomObject>
    <fields>
        <fullName>Account_No__c</fullName>
        <formula>Account.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Salesforce Account ID of the Account related to Contract</inlineHelpText>
        <label>Account #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Advance_amount__c</fullName>
        <label>Advance amount</label>
        <summarizedField>Agreement__c.Advance_amount__c</summarizedField>
        <summaryFilterItems>
            <field>Agreement__c.Active_Agreement__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Agreement__c.Contract__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Bank_Name__c</fullName>
        <label>Bank Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_Print_Mode__c</fullName>
        <label>Bill Print Mode</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BILPRNT001</fullName>
                    <default>true</default>
                    <label>Paper</label>
                </value>
                <value>
                    <fullName>BILPRNT003</fullName>
                    <label>Paperless</label>
                </value>
                <value>
                    <fullName>BILPRNT002</fullName>
                    <label>Paperplus</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bill_Print_Mode_v10__c</fullName>
        <label>Bill Print Mode v10</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Paper</fullName>
                </value>
                <value>
                    <fullName>Paperless</fullName>
                </value>
                <value>
                    <fullName>Paperplus</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Billing_Preference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Address</label>
        <referenceTo>Address__c</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CXE_6_Months_Paperless_Lock_in__c</fullName>
        <formula>IF (TODAY() &lt; DATE( Year( CXE_PaperlessBIllingEnrollment_Effective__c )+floor((MONTH(CXE_PaperlessBIllingEnrollment_Effective__c) + 6 - 1) / 12) , 
    mod(MONTH(CXE_PaperlessBIllingEnrollment_Effective__c) + 6 -1, 12) + 1 , 
     day(CXE_PaperlessBIllingEnrollment_Effective__c)
), TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>6 Months Paperless Lock-in</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CXE_APA_Agent__c</fullName>
        <description>APA Agent</description>
        <label>APA Agent</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>076006</fullName>
                    <label>AUB</label>
                </value>
                <value>
                    <fullName>003006</fullName>
                    <label>BDO</label>
                </value>
                <value>
                    <fullName>002006</fullName>
                    <label>BPI</label>
                </value>
                <value>
                    <fullName>010206</fullName>
                    <label>Chinabank</label>
                </value>
                <value>
                    <fullName>010506</fullName>
                    <label>Citibank</label>
                </value>
                <value>
                    <fullName>001106</fullName>
                    <label>PBCOM</label>
                </value>
                <value>
                    <fullName>026506</fullName>
                    <label>PNB</label>
                </value>
                <value>
                    <fullName>031306</fullName>
                    <label>RCBC</label>
                </value>
                <value>
                    <fullName>031806</fullName>
                    <label>Robinsons Bank</label>
                </value>
                <value>
                    <fullName>032406</fullName>
                    <label>Security Bank</label>
                </value>
                <value>
                    <fullName>035506</fullName>
                    <label>UCPB</label>
                </value>
                <value>
                    <fullName>035006</fullName>
                    <label>UnionBank</label>
                </value>
                <value>
                    <fullName>097006</fullName>
                    <label>PNB Card</label>
                </value>
                <value>
                    <fullName>109006</fullName>
                    <label>BDO Card</label>
                </value>
                <value>
                    <fullName>108006</fullName>
                    <label>BPI Card</label>
                </value>
                <value>
                    <fullName>107006</fullName>
                    <label>Citibank Card</label>
                </value>
                <value>
                    <fullName>074006</fullName>
                    <label>Equicom Card</label>
                </value>
                <value>
                    <fullName>000606</fullName>
                    <label>East West Card</label>
                </value>
                <value>
                    <fullName>019406</fullName>
                    <label>Metrobank Card</label>
                </value>
                <value>
                    <fullName>031206</fullName>
                    <label>RCBC Bankard</label>
                </value>
                <value>
                    <fullName>032606</fullName>
                    <label>Security Bank MasterCard</label>
                </value>
                <value>
                    <fullName>035406</fullName>
                    <label>Unionbank Visa</label>
                </value>
                <value>
                    <fullName>101006</fullName>
                    <label>DINER&apos;S CLUB CARD</label>
                </value>
                <value>
                    <fullName>104006</fullName>
                    <label>EQUITABLE CARD NETWORK</label>
                </value>
                <value>
                    <fullName>099006</fullName>
                    <label>HSBC Card</label>
                </value>
                <value>
                    <fullName>033606</fullName>
                    <label>Standard Chartered Credit</label>
                </value>
                <value>
                    <fullName>000106</fullName>
                    <label>PNB (Allied)</label>
                </value>
                <value>
                    <fullName>002806</fullName>
                    <label>BDO (Filinvest)</label>
                </value>
                <value>
                    <fullName>002906</fullName>
                    <label>BDO (SMDC)</label>
                </value>
                <value>
                    <fullName>003206</fullName>
                    <label>BDO (St. Francis Hotels)</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CXE_APA_BL_Expiry_Date__c</fullName>
        <label>APA Blacklist Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CXE_Bypass_Validation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This indicate that the record was created without going through the validation</description>
        <label>Bypass Validation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CXE_Date6monthfromNOWPlus1__c</fullName>
        <formula>DATE( Year( CXE_PaperlessBIllingEnrollment_Effective__c )+floor((MONTH(CXE_PaperlessBIllingEnrollment_Effective__c) + 6 - 1) / 12) , 
mod(MONTH(CXE_PaperlessBIllingEnrollment_Effective__c) + 6 -1, 12) + 1 , 
day(CXE_PaperlessBIllingEnrollment_Effective__c)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CXE_Date6monthfromNOWPlus1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CXE_Date6monthfromNOW__c</fullName>
        <formula>DATE( Year( CXE_PaperlessBIllingEnrollment_Effective__c )+floor((MONTH(CXE_PaperlessBIllingEnrollment_Effective__c) + 6 - 1) / 12) , 
    mod(MONTH(CXE_PaperlessBIllingEnrollment_Effective__c) + 6 -1, 12) + 1 , 
     day(CXE_PaperlessBIllingEnrollment_Effective__c)
)-1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CXE_Date6monthfromNOW</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CXE_Enrolled_to_APA_formula__c</fullName>
        <description>Set Enrolled to APA? to true if Method of Payment is ADA (Bank).</description>
        <formula>ISPICKVAL(Method_of_Payment__c, &quot;ADA (Bank)&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Enrolled to APA?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CXE_Enrolled_to_Paperless_Billing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enrolled to Paperless Billing?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CXE_Is_APA_Blacklisted__c</fullName>
        <formula>IF(NOT(ISNULL(CXE_APA_BL_Expiry_Date__c))  &amp;&amp; CXE_APA_BL_Expiry_Date__c &gt;= TODAY(), TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is APA Blacklisted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CXE_PaperlessBIllingCancelEffective__c</fullName>
        <label>Paperless Billing Cancellation Effective</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CXE_PaperlessBIllingEnrollment_Effective__c</fullName>
        <label>Paperless Billing Enrollment Effective</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CXE_Pay_Mthd_Effective_Date__c</fullName>
        <label>Payment Method Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CXE_Pending_APA_Cancellation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Pending APA Cancellation?</description>
        <label>Pending APA Cancellation?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CXE_Pending_APA_Enrollment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Pending APA Enrollment?</description>
        <label>Pending APA Enrollment?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CXE_Reason_for_Cancellation_APA__c</fullName>
        <description>Reason for Cancellation APA</description>
        <label>Reason for Cancellation APA</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Change in bank account or card number</fullName>
                </value>
                <value>
                    <fullName>Change in payment method</fullName>
                </value>
                <value>
                    <fullName>Change in address</fullName>
                </value>
                <value>
                    <fullName>Change in payor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CXE_ReasonsforCancellationPaperlessBill__c</fullName>
        <label>Reasons for Cancellation Paperless Bill</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Care_Of__c</fullName>
        <label>Care Of</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Code_Account_Rep__c</fullName>
        <label>Code Account Rep</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code_Statement_Production_Trigger_Type__c</fullName>
        <label>Code Statement Production Trigger Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code_Status__c</fullName>
        <label>Code Status</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code_Type__c</fullName>
        <label>Code Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collecting_Office__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Collecting Office</label>
        <referenceTo>Office__c</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Collecting_Office</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>Contract External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Contract Details Captured&quot;, &quot;Missing: &quot;&amp;IF( LEN( TEXT(MONTH( StartDate ))) = 0, &quot;Contract Start Date, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(LEN(  TEXT(ContractTerm)) = 0, &quot;Contract Term, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN( BillingCity ) = 0, &quot;Complete Contract Address, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(LEN( CustomerSignedId ) = 0, &quot;Customer Signature, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL(  OwnerExpirationNotice ,&quot;&quot;), &quot;Owner Expiration Notice&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF( LEN(TEXT(MONTH(StartDate)))=0, 0,20) + IF( LEN(TEXT( ContractTerm ))=0, 0,20) + IF( LEN( BillingCity ) = 0, 0,20) + IF( LEN( CustomerSignedId) = 0, 0,20) + IF( ISPICKVAL(  OwnerExpirationNotice ,&quot;&quot;), 0,20)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ERP_Account_Id__c</fullName>
        <formula>Account.ERPAccountID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ERP Account Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Contract_Id__c</fullName>
        <externalId>true</externalId>
        <label>ERP Contract Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form_of_Payment_Sub__c</fullName>
        <label>Payment Mode Sub-type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CWT</fullName>
                </value>
                <value>
                    <fullName>FWV</fullName>
                </value>
                <value>
                    <fullName>Fund Transfer</fullName>
                </value>
                <value>
                    <fullName>Direct Deposit to bank account</fullName>
                </value>
                <value>
                    <fullName>Applied Credit</fullName>
                </value>
                <value>
                    <fullName>Offsetting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Form_of_Payment__c</fullName>
        <label>Payment Mode</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Check</fullName>
                </value>
                <value>
                    <fullName>Certificate of Tax Withheld at Source (BIR Forms)</fullName>
                </value>
                <value>
                    <fullName>Fund Transfer</fullName>
                </value>
                <value>
                    <fullName>Meralco Internal</fullName>
                </value>
                <value>
                    <fullName>Credit card</fullName>
                </value>
                <value>
                    <fullName>Debit card</fullName>
                </value>
                <value>
                    <fullName>E-wallet</fullName>
                </value>
                <value>
                    <fullName>Prepaid Card</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IBAN__c</fullName>
        <label>IBAN</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Method_of_Payment__c</fullName>
        <label>Method of Payment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ADA (Bank)</fullName>
                </value>
                <value>
                    <fullName>ADA (Credit Card)</fullName>
                </value>
                <value>
                    <fullName>Over the Counter</fullName>
                </value>
                <value>
                    <fullName>Company Expenses</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>New_Bill_Print_Mode__c</fullName>
        <description>New Bill Print Mode to be updated</description>
        <label>New Bill Print Mode</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BILPRNT001</fullName>
                    <label>Paper</label>
                </value>
                <value>
                    <fullName>BILPRNT003</fullName>
                    <label>Paperless</label>
                </value>
                <value>
                    <fullName>BILPRNT002</fullName>
                    <label>Paperplus</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Non_Disconnectable_End__c</fullName>
        <label>Non-Disconnectable End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Non_Disconnectable_Start__c</fullName>
        <label>Non-Disconnectable Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Non_Disconnectable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Non-Disconnectable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Payment_Day__c</fullName>
        <label>Payment Day</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1st of month</fullName>
                </value>
                <value>
                    <fullName>Last day of month</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pending_BP_Update__c</fullName>
        <description>Indicate if this contract has a pending Bill Print Mode update</description>
        <formula>NOT(ISBLANK(Text(New_Bill_Print_Mode__c))) 
&amp;&amp;
(TEXT(Bill_Print_Mode__c) !=  TEXT(New_Bill_Print_Mode__c))</formula>
        <label>Pending Bill Print Mode Update?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Recipient_Name__c</fullName>
        <label>Recipient Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>RES Customers - Contract</relationshipLabel>
        <relationshipName>Contracts_RES_Account</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Statement_Production_Trigger_Type__c</fullName>
        <label>Statement Production Trigger Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Bill Note Emission Date</fullName>
                </value>
                <value>
                    <fullName>Preferred Statement Date</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Terms_of_Payment__c</fullName>
        <label>Terms of Payment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>14d end of month</fullName>
                </value>
                <value>
                    <fullName>14d net</fullName>
                </value>
                <value>
                    <fullName>30d end of month</fullName>
                </value>
                <value>
                    <fullName>30d net</fullName>
                </value>
                <value>
                    <fullName>60d end of month</fullName>
                </value>
                <value>
                    <fullName>60d net</fullName>
                </value>
                <value>
                    <fullName>Cash on delivery</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Outstanding_Amount__c</fullName>
        <label>Total Outstanding Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Regular</fullName>
                </value>
                <value>
                    <fullName>Prepaid</fullName>
                </value>
                <value>
                    <fullName>SOLR</fullName>
                </value>
                <value>
                    <fullName>Retailer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>V10_Account_No__c</fullName>
        <externalId>true</externalId>
        <label>Legacy Account Number</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <listViews>
        <fullName>AllActivatedContracts</fullName>
        <columns>CONTRACT.CONTRACT_NUMBER</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>CONTRACT.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>All Activated Contracts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AllContracts</fullName>
        <columns>CONTRACT.CONTRACT_NUMBER</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>V10_Account_No__c</columns>
        <columns>CONTRACT.STATUS</columns>
        <filterScope>Everything</filterScope>
        <label>All Contracts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AllDraftContracts</fullName>
        <columns>CONTRACT.CONTRACT_NUMBER</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>V10_Account_No__c</columns>
        <columns>CONTRACT.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>All Draft Contracts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AllInApprovalContracts</fullName>
        <columns>CONTRACT.CONTRACT_NUMBER</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>V10_Account_No__c</columns>
        <columns>CONTRACT.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>P</value>
        </filters>
        <label>All In Approval Contracts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MyActivatedContracts</fullName>
        <columns>CONTRACT.CONTRACT_NUMBER</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>V10_Account_No__c</columns>
        <columns>CONTRACT.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>My Activated Contracts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MyDraftContracts</fullName>
        <columns>CONTRACT.CONTRACT_NUMBER</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>V10_Account_No__c</columns>
        <columns>CONTRACT.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>My Draft Contracts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MyInApprovalContracts</fullName>
        <columns>CONTRACT.CONTRACT_NUMBER</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>CONTRACT.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>P</value>
        </filters>
        <label>My In Approval Contracts</label>
        <language>en_US</language>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>